// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<ul>
  <MockElement
    item={
      Object {
        "label": "Item 1",
        "value": "1",
      }
    }
    key="1"
    removable={false}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
  <MockElement
    item={
      Object {
        "label": "Item 2",
        "value": "2",
      }
    }
    key="2"
    removable={false}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
  <MockElement
    item={
      Object {
        "label": "Item 3",
        "value": "3",
      }
    }
    key="3"
    removable={false}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
  <MockElement
    item={
      Object {
        "label": "Item 4",
        "value": "4",
      }
    }
    key="4"
    removable={false}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
  <MockElement
    item={
      Object {
        "label": "Item 5",
        "value": "5",
      }
    }
    key="5"
    removable={false}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
</ul>
`;

exports[`renders no items 1`] = `
<ul
  onMouseDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onPointerDown={[Function]}
  onTouchStart={[Function]}
>
  <MockElement
    item={
      Object {
        "label": "None",
        "value": "",
      }
    }
    removable={false}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
</ul>
`;

exports[`renders removable 1`] = `
<ul>
  <MockElement
    item={
      Object {
        "label": "Item 1",
        "value": "1",
      }
    }
    key="1"
    removable={true}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
  <MockElement
    item={
      Object {
        "label": "Item 2",
        "value": "2",
      }
    }
    key="2"
    removable={true}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
  <MockElement
    item={
      Object {
        "label": "Item 3",
        "value": "3",
      }
    }
    key="3"
    removable={true}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
  <MockElement
    item={
      Object {
        "label": "Item 4",
        "value": "4",
      }
    }
    key="4"
    removable={true}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
  <MockElement
    item={
      Object {
        "label": "Item 5",
        "value": "5",
      }
    }
    key="5"
    removable={true}
    styles_borderRadius=".2em"
    styles_checkRadio_borderWidth="2px"
    styles_checkRadio_labelMargin=".2em"
    styles_checkRadio_marginBetween="1em"
    styles_checkRadio_paddingBottom=".2em"
    styles_checkRadio_paddingLeft=".2em"
    styles_checkRadio_paddingRight=".2em"
    styles_checkRadio_paddingTop=".2em"
    styles_colors_background="white"
    styles_colors_disabled="#ECECEC"
    styles_colors_highlight="lightblue"
    styles_colors_primary="black"
    styles_colors_secondary="#C3C3C3"
    styles_colors_warning="#FABAAC"
    styles_colors_warningBold="#FA2222"
    styles_disabled={false}
    styles_fontSize="1em"
    styles_hasOptions={true}
    styles_hasSelection={false}
    styles_icon_width="1em"
    styles_multiple={false}
    styles_optionHighlighted={Array []}
    styles_option_paddingBottom=".25em"
    styles_option_paddingLeft=".25em"
    styles_option_paddingRight=".25em"
    styles_option_paddingTop=".25em"
    styles_paddingBottom=".25em"
    styles_paddingLeft=".25em"
    styles_paddingRight=".25em"
    styles_paddingTop=".25em"
    styles_rightToLeft={false}
    styles_search_width="10em"
    styles_selection_margin=".2em"
    styles_selection_paddingBottom=".2em"
    styles_selection_paddingLeft=".4em"
    styles_selection_paddingRight=".4em"
    styles_selection_paddingTop=".2em"
    styles_width="600px"
  />
</ul>
`;
